@@ -26,6 +26,7 @@ Tasks:
 - #7325 Add timeout to all GitHub workflows
 - #7326 Restore lpDesktop assignment in Windows daemon
 - #7327 Only use Ninja to build on Windows
+- #7328 Reset error state before calling Process32Next
 
 # 1.14.6
 
